# test-cpp-github-actions

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake.yml  linux-docker.yml  linux.yml  macos-12.yml  macos.yml  ubuntu-18.04-docker-custom-image.yml  ubuntu-18.04-docker-minimal-custom-image.yml  ubuntu-18.04-docker-minimal.yml  ubuntu-18.04-docker.yml  windows-nobinarycache.yml  windows-nomanifestmode.yml  windows.yml
.github/workflows-bak/: linux.yml
.github/workflows/tmp/: linux.yml  ubuntu-18.04-docker-custom-image.yml
include/foo/: foo.h
src/: foo.cpp
